<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="380dp"
    android:layout_height="600dp"
    android:background="@android:color/white"
    android:layout_marginTop="@dimen/margin_large"
    android:layout_margin="@dimen/margin_parent_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit_black_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ivImage"
        />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="350dp"
        android:layout_height="400dp"
        app:layout_constraintTop_toBottomOf="@id/btnEdit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etTitle"
        />

    <EditText
        android:id="@+id/etTitle"
        android:layout_margin="@dimen/margin_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:textStyle="bold"
        android:hint="@string/hint_title"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/ivImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etDescription"
        />

    <EditText
        android:id="@+id/etDescription"
        android:layout_margin="@dimen/margin_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:hint="@string/hint_description"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/etTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_share"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDescription"
        app:layout_constraintBottom_toBottomOf="parent"/>

   <Button
       android:id="@+id/btnSave"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/button_text_save"
       android:layout_marginTop="@dimen/margin_small"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toBottomOf="@id/etDescription"
       app:layout_constraintBottom_toBottomOf="parent"
       android:visibility="gone"
       />

</android.support.constraint.ConstraintLayout>