<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="NewPasswordDataBinding">
        <variable
            name="forgot"
            type="com.vend.photobucket.ui.authentication.forgot.ForgotViewModel"/>

        <variable
            name="clickListener"
            type="com.vend.photobucket.ui.authentication.forgot.NewPasswordClickListener"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_parent_layout"
        tools:context=".ui.authentication.forgot.NewPasswordFragment">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={forgot.newPassword}"
            android:hint="@string/hint_password"
            android:maxLines="1"
            android:inputType="textPassword"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/etConfirmPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={forgot.confirmPassword}"
            android:hint="@string/hint_confirm_password"
            android:maxLines="1"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            app:layout_constraintBottom_toTopOf="@id/btnChangePassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_forgot_verify_number"
            android:onClick="@{clickListener::changePassword}"
            app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/margin_large"/>
    </android.support.constraint.ConstraintLayout>
</layout>